--- a/V2RayX/AdvancedWindow.xib
+++ b/V2RayX/AdvancedWindow.xib
@@ -175,7 +175,7 @@ Gw
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
                                         </scrollView>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RZC-B9-mJC">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="458" translatesAutoresizingMaskIntoConstraints="NO" id="RZC-B9-mJC">
                                             <rect key="frame" x="17" y="315" width="462" height="42"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" id="GuN-KN-aPK">
@@ -237,7 +237,7 @@ Gw
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
                                         </scrollView>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="22V-dc-UXp">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="458" translatesAutoresizingMaskIntoConstraints="NO" id="22V-dc-UXp">
                                             <rect key="frame" x="17" y="313" width="462" height="42"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" title="Save your airport subscription link here and refresh config from server list in menubar icon." id="qfa-aV-cmn">
@@ -640,7 +640,7 @@ Gw
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </scroller>
                                         </scrollView>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="455-Tq-ULi">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="458" translatesAutoresizingMaskIntoConstraints="NO" id="455-Tq-ULi">
                                             <rect key="frame" x="17" y="315" width="462" height="42"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" title="To fully take control of the V2Ray core, directly provide the full path to complete configure files below." id="sQg-oW-z1H">
@@ -678,7 +678,7 @@ Gw
                                     <rect key="frame" x="10" y="33" width="494" height="360"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-bm-RTr">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="458" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-bm-RTr">
                                             <rect key="frame" x="15" y="297" width="462" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" id="a4D-MW-Gqf">
@@ -708,7 +708,7 @@ Gw
                                                 <action selector="showCorePath:" target="-2" id="3lR-d7-lFL"/>
                                             </connections>
                                         </button>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tfr-JR-7kn">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="415" translatesAutoresizingMaskIntoConstraints="NO" id="Tfr-JR-7kn">
                                             <rect key="frame" x="17" y="218" width="419" height="17"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" title="Make sure the following files are present:" id="1Vl-aE-8sN">
@@ -812,7 +812,7 @@ Gw
             <rect key="frame" x="0.0" y="0.0" width="530" height="194"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uei-XJ-a4J">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="495" translatesAutoresizingMaskIntoConstraints="NO" id="uei-XJ-a4J">
                     <rect key="frame" x="18" y="12" width="499" height="170"/>
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" id="GeG-md-J3l">
@@ -836,7 +836,7 @@ balance: v2ray will randomly pickup an outbound from all
             <rect key="frame" x="0.0" y="0.0" width="438" height="380"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ePw-bH-ogO">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" preferredMaxLayoutWidth="398" translatesAutoresizingMaskIntoConstraints="NO" id="ePw-bH-ogO">
                     <rect key="frame" x="18" y="20" width="402" height="340"/>
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" id="EXS-dL-5V7">
